--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Moa Danielsson</title>
-    <link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet">
-    
+    <link href="https://fonts.googleapis.com/css?family=Satisfy|Titillium+Web" rel="stylesheet">
   </head>
   <body>
     <!-- This element is used in src/index.js to render the react root into -->
